comment out the transitions unfortunately caused too much bugs, finished adding the credits, just have to put pics now

--- a/src/app/views/pages/credits/credits.component.scss
+++ b/src/app/views/pages/credits/credits.component.scss
@@ -68,14 +68,24 @@
   100% {opacity: 0;}
 }
 
+
 //Credits Content
 
 section {
-  height:95vh;
   width:80vw;
   display: flex;
   align-items: center;
   flex-direction: column;
+  height: 100vh;
+}
+
+.projectstellar {
+  scale:0.9;
+  width:100vw;
+  height:170vh;
+  h2 {
+    font-size: 2rem;
+  }
 }
 
 
@@ -191,7 +201,7 @@ h3 {
 }
 
 
-
+/*
 @supports ( animation-timeline: view() )
 {
   @keyframes wipe {
@@ -213,9 +223,10 @@ h3 {
 
 
   .zoocadia {
+    view-timeline: --trigger block;
     animation: trigger linear forwards;
-    animation-timeline: view();
-    animation-range: entry 10% contain 10%;
+    animation-timeline: --trigger;
+    animation-range: entry 1% contain 4%;
   }
 
 
@@ -233,3 +244,4 @@ h3 {
     }
   }
 }
+*/
